--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,16 +8,49 @@
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/globalStyles.css">
 </head>
+
 <body>
-    <div class="container-sm container-md container-lg container-xl container-xxl">
-        <p>bv,jhb,</p>
-        <!-- <div class="row">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">vmjv</div>
-        </div> -->
+    <div class="container-sm container-md container-lg container-xl container-xxl p-0">
+        <div class="container-sm container-md container-lg container-xl container-xxl headerSection">
+            <div class="container-sm container-md container-lg container-xl container-xxl topSection">
+                <nav class="navbar navbar-expand-xl">
+                    <div class="container-fluid">
+                            <a class="navbar-brand float-start d-block w-50 logoSection" href="index.html">
+                                <img src="./images/logo.svg" alt="Digicrafts Logo" class="img-fluid" />
+                            </a>
+                        <button class="navbar-toggler float-end" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarBasic" aria-controls="navbarBasic" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse hide" id="navbarBasic">
+                            <ul class="navbar-nav mb-2 mb-xl-0">
+                                <li class="nav-item">
+                                    <a class="nav-link fw-bold text-uppercase active" aria-current="page" href="#">MISSION</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link fw-bold text-uppercase" href="#">ABOUT US</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link fw-bold text-uppercase" href="#">SERVICES</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link fw-bold text-uppercase" href="#">CONTACT US</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
+
     </div>
 
     <script src="scripts/jquery.js" type="text/javascript"></script>
     <script src="scripts/bootstrap.min.js" type="text/javascript"></script>
+    <!-- <script src="scripts/bootstrap.bundle.min.js" type="text/javascript"></script> -->
+    <script src="scripts/popper.min.js" type="text/javascript"></script>
     <script src="scripts/globalScripts.js" type="text/javascript"></script>
 </body>
+
 </html>
