--- a/index.html
+++ b/index.html
@@ -9,41 +9,58 @@
     <link rel="stylesheet" href="styles/globalStyles.css">
 </head>
 
-<body>
-    <div class="container-sm container-md container-lg container-xl container-xxl p-0">
-        <div class="container-sm container-md container-lg container-xl container-xxl headerSection">
-            <div class="container-sm container-md container-lg container-xl container-xxl topSection">
-                <nav class="navbar navbar-expand-xl">
-                    <div class="container-fluid">
-                            <a class="navbar-brand float-start d-block w-50 logoSection" href="index.html">
+<body class="bg-white">
+    <div class="row">
+        <div class="container-fluid p-0">
+            <div class="headerSection">
+                <div class="topSection">
+                    <nav class="navbar navbar-expand-xl">
+                        <div class="container-fluid">
+                            <a class="logoSection navbar-brand float-start d-block w-50" href="index.html">
                                 <img src="./images/logo.svg" alt="Digicrafts Logo" class="img-fluid" />
                             </a>
-                        <button class="navbar-toggler float-end" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarBasic" aria-controls="navbarBasic" aria-expanded="false"
-                            aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse hide" id="navbarBasic">
-                            <ul class="navbar-nav mb-2 mb-xl-0">
-                                <li class="nav-item">
-                                    <a class="nav-link fw-bold text-uppercase active" aria-current="page" href="#">MISSION</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link fw-bold text-uppercase" href="#">ABOUT US</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link fw-bold text-uppercase" href="#">SERVICES</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link fw-bold text-uppercase" href="#">CONTACT US</a>
-                                </li>
-                            </ul>
+                            <button class="navbar-toggler float-end" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#navbarBasic" aria-controls="navbarBasic" aria-expanded="false"
+                                aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse hide" id="navbarBasic">
+                                <ul class="navbar-nav mb-2 mb-xl-0">
+                                    <li class="nav-item">
+                                        <a class="nav-link fw-bold text-uppercase active" aria-current="page"
+                                            href="#">MISSION</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link fw-bold text-uppercase" href="#">ABOUT US</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link fw-bold text-uppercase" href="#">SERVICES</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link fw-bold text-uppercase" href="#">CONTACT US</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                </nav>
+                    </nav>
+                </div>
             </div>
-        </div>
+            <!-- End  headerSection-->
 
+            <div class="row justify-content-md-center">
+                <div class="col-md-auto bg-primary w-75">
+                    Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content 
+                </div>
+            </div>
+            <!-- <div class="justify-content-md-center">
+            <div
+                class="bannerInfo bg-primary col-auto col-sm-auto col-md-auto col-lg-auto col-xl-auto col-xxl-auto w-50">
+                fjyfy
+            </div>
+        </div> -->
+
+            <!-- END bannerInfo -->
+        </div>
     </div>
 
     <script src="scripts/jquery.js" type="text/javascript"></script>
