--- a/index.html
+++ b/index.html
@@ -48,17 +48,10 @@
             <!-- End  headerSection-->
 
             <div class="row justify-content-md-center">
-                <div class="col-md-auto bg-primary w-75">
+                <div class="col-md-auto w-75">
                     Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content 
                 </div>
             </div>
-            <!-- <div class="justify-content-md-center">
-            <div
-                class="bannerInfo bg-primary col-auto col-sm-auto col-md-auto col-lg-auto col-xl-auto col-xxl-auto w-50">
-                fjyfy
-            </div>
-        </div> -->
-
             <!-- END bannerInfo -->
         </div>
     </div>
