--- a/index.html
+++ b/index.html
@@ -48,8 +48,20 @@
             <!-- End  headerSection-->
 
             <div class="row justify-content-md-center">
-                <div class="col-md-auto w-75">
-                    Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content Variable width content 
+                <div class="col-md-auto col-sm-12 col-md-9 col-lg-9 col-xl-9 col-xxl-9">
+                    <h4 class="card-title text-center text-sm-center text-md-center text-lg-center text-xl-center text-xxl-center">Vision & Mission that Drive Innovation</h4>
+                    <div class="card-group">
+                        <div class="card">
+                            <div class="card-body">
+                                <p class="card-text text-center text-sm-center text-md-start text-lg-start text-xl-start text-xxl-start">Enabling enterprises to accelerate their growth through innovative, reliableh, and efficient technology solutions designed to align with their business goals.</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-body">
+                                <p class="card-text text-center text-sm-center text-md-start text-lg-start text-xl-start text-xxl-start">We craft user-centric, modern digital solutions by blending human-centered design with cutting-edge technology to drive meaningful business value.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- END bannerInfo -->
