--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
                     </h1>
                 </div>
 
-                <div class="row row-cols-1 row-cols-sm-2 g-3 mx-0 mx-sm-0 mx-md-0 mx-lg-5 mx-xl-5 mx-xxl-5 my-5 py-0 0 py-lg-5 py-xl-5 py-xxl-5 0 py-lg-5 py-xl-5 py-xxl-5">
+                <div class="row row-cols-1 row-cols-sm-2 g-3 mx-0 mx-sm-0 mx-md-0 mx-lg-5 mx-xl-5 mx-xxl-5 my-5 py-0 0 py-lg-5 py-xl-5 py-xxl-5 0 py-lg-5 py-xl-5 py-xxl-5">                   
                     <div class="col">
-                        <div class="servInfo card bg-transparent border-0">
+                        <div class="servInfo card bg-transparent border-0 float-end">
                             <div class="card-body">
                                 <h5 class="card-title">Business Centric Digital Solutions</h5>
                                 <p class="card-text">TBespoke Digital Solutions: We deliver end-to-end, purpose-fit
@@ -230,17 +230,15 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card bg-transparent border-0">
-                            <div class="servInfo card-body">
-                                <h5 class="card-title">Cloud &amp; Infrastructure Services</h5>
-                                <p class="card-text">Cloud Native: Defining how an organisation can effectively leverage
-                                    cloud technologies to support its overall business goals..</p>
-                            </div>
+                        <div class="servInfo card-body float-end">
+                            <h5 class="card-title">Cloud &amp; Infrastructure Services</h5>
+                            <p class="card-text">Cloud Native: Defining how an organisation can effectively leverage
+                                cloud technologies to support its overall business goals..</p>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card bg-transparent border-0">
-                            <div class="servInfo card-body">
+                            <div class="servInfo card-body float-end">
                                 <h5 class="card-title">Cloud & Infrastructure Services</h5>
                                 <p class="card-text">Cloud Native: Defining how an organisation can effectively leverage
                                     cloud technologies to support its overall business goals..</p>
