--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
             <div class="card bg-transparent mt-5 pt-5 border-0">
                 <div class="card-header border-0">
                     <h1 class="ff-worldEvolves text-center fw-normal text-dark card-title">As the world evolves</h1>
-                    <h1 class="text-yellow text-center card-title text-warning">and so are we, with expertise that keeps
-                        pace.</h1>
+                    <h1 class="text-yellow text-center card-title text-warning fw-bolder">and so are we, with expertise that keeps pace.</h1>
                 </div>
                 <div class="card-body p-0">
                     <div class="row g-0">
@@ -190,7 +189,7 @@
                                     </div>
                                     <div class="buttonSec">
                                         <button type="button"
-                                            class="btn btn-outline-secondary w-50 rounded-pill text-uppercase fs-5 text-dark p-3">LearnMore</button>
+                                            class="btn btn-outline-secondary w-50 rounded-pill text-uppercase fs-5 text-dark p-3">Learn More</button>
                                     </div>
                                 </div>
                             </div>
@@ -201,11 +200,11 @@
 
             <div class="servicesSection card border-0 px-5">
                 <div class="customHeading card-body mb-5">
-                    <h1 class="ff-values card-title text-center text-uppercase align-self-center fw-normal w-100">We
+                    <h1 class="ff-values card-title text-center align-self-center fw-normal w-100">We
                         want to
                         share our value added</h1>
                     </h1>
-                    <h1 class="txt-service card-title text-center text-uppercase align-self-center fw-bolder w-100">
+                    <h1 class="txt-service card-title text-center align-self-center fw-bolder w-100">
                         Services</h1>
                     </h1>
                 </div>
@@ -214,7 +213,7 @@
                     <div class="col">
                         <div class="servInfo card bg-transparent border-0 float-end">
                             <div class="card-body">
-                                <h5 class="card-title">Business Centric Digital Solutions</h5>
+                                <h5 class="card-title fw-bolder">Business Centric Digital Solutions</h5>
                                 <p class="card-text">TBespoke Digital Solutions: We deliver end-to-end, purpose-fit
                                     solutions by reimagining business-critical processes ...</p>
                             </div>
@@ -223,7 +222,7 @@
                     <div class="col">
                         <div class="card bg-transparent border-0">
                             <div class="servInfo card-body">
-                                <h5 class="card-title">Design Consulting</h5>
+                                <h5 class="card-title fw-bolder">Design Consulting</h5>
                                 <p class="card-text">Business Transformation: Strategic alignment of design with
                                     business objectives to drive organisational change...</p>
                             </div>
@@ -231,7 +230,7 @@
                     </div>
                     <div class="col">
                         <div class="servInfo card-body float-end">
-                            <h5 class="card-title">Cloud &amp; Infrastructure Services</h5>
+                            <h5 class="card-title fw-bolder">Cloud &amp; Infrastructure Services</h5>
                             <p class="card-text">Cloud Native: Defining how an organisation can effectively leverage
                                 cloud technologies to support its overall business goals..</p>
                         </div>
@@ -239,7 +238,7 @@
                     <div class="col">
                         <div class="card bg-transparent border-0">
                             <div class="servInfo card-body float-end">
-                                <h5 class="card-title">Cloud & Infrastructure Services</h5>
+                                <h5 class="card-title fw-bolder">Cloud & Infrastructure Services</h5>
                                 <p class="card-text">Cloud Native: Defining how an organisation can effectively leverage
                                     cloud technologies to support its overall business goals..</p>
                             </div>
@@ -256,11 +255,10 @@
                     <div class="col-0 col-sm-0 col-md-0 col-lg-4 col-xl-4 col-xxl-4 ms-0 ms-sm-0  ms-md-0  ms-lg-5  ms-xl-5  ms-xxl-5">
                         <!-- <div class="card-body p-5 ms-5 mt-5"> -->
                         <div class="card-body ms-0 ms-sm-0 ms-md-0 ms-lg-5 ms-xl-5 ms-xxl-5 my-5 p-0 p-lg-5 p-xl-5 p-xxl-5 0 p-lg-5 p-xl-5 p-xxl-5">
-                            <p class="fw-velocity card-text text-white fs-2 fw-normal">For unprecedented Velocity. Impeccable
+                            <p class="fw-velocity card-text text-white fs-2 fw-normal mb-0">For unprecedented Velocity. Impeccable
                                 Reliability.</p>
                             <a href=""
-                                class="card-text text-white fs-2 fw-normal text-warning text-decoration-none">Contact
-                                us</a>
+                                class="card-text text-white fs-1 fw-bolder text-warning text-decoration-none">Contact us</a>
                             <div class="socialMediaSection card-body bg-white p-2 mt-5 w-50 text-center d-none d-sm-none d-md-none d-lg-block d-xl-block d-xxl-block ">
                                 <a href="#">
                                     <img src="./images/iconsSocialMedia.png" alt="Social Media" srcset="" />
