--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Digicrafts</title>
     <link rel="stylesheet" href="styles/bootstrap.min.css" />
     <link rel="stylesheet" href="styles/globalStyles.css" />
-    <link rel="stylesheet" href="styles/mediaQueries.css" />
+    <link rel="stylesheet" href="styles/mediaQueries-m.css" />
+    <link rel="stylesheet" href="styles/mediaQueries-t.css" />
 </head>
 
 <body class="bg-white">
@@ -78,8 +79,8 @@
             </div>
             <!-- END bannerInfo -->
 
-            <div class="card bg-transparent mt-5 pt-5 border-0">
-                <div class="card-header border-0">
+            <div class="evolvesInfo card bg-transparent mt-0 mt-sm-0 mt-md-0 mt-lg-0 mt-xl-5  mt-xxl-5 pt-0 pt-sm-0 pt-md-0 pt-lg-0 pt-xl-5 pt-xxl-5 border-0">
+                <div class="card-header border-0 bg-white">
                     <h1 class="ff-worldEvolves text-center fw-normal text-dark card-title">As the world evolves</h1>
                     <h1 class="text-yellow text-center card-title text-warning fw-bolder">and so are we, with expertise that keeps pace.</h1>
                 </div>
@@ -148,12 +149,12 @@
                                 <img src="./images/icon_Next.png" alt="Next" />
                             </a>
                         </nav>
-                        <div class="tab-content mt-5 pt-5" id="pills-tabContent">
+                        <div class="tab-content mt-5 mt-sm-5 mt-md-5 mt-lg-5 mt-xl-5 mt-xxl-5 pt-0 pt-sm-0 pt-md-0 pt-lg-0 pt-xl-5 pt-xxl-5" id="pills-tabContent">
                             <div class="tab-pane fade show active" id="pills-prev" role="tabpanel"
                                 aria-labelledby="pills-prev-tab">
                                 <div class="row g-0">
                                     <div class="row col-12 col-sm-12 col-md-12 col-lg-3 col-xl-3 col-xxl-3">
-                                        <h1 class="card-title fw-normal mb-5">Reduced manual errors by 60%</h1>
+                                        <h1 class="reducedManual card-title fw-normal mb-5">Reduced manual errors by 60%</h1>
                                     </div>
                                     <div class="col-12 col-sm-12 col-md-12 col-lg-9 col-xl-9 col-xxl-9">
                                         <div class="card-body">
@@ -167,7 +168,7 @@
                                     </div>
                                     <div class="buttonSec">
                                         <button type="button"
-                                            class="btn btn-outline-secondary w-50 rounded-pill text-uppercase fs-5 text-dark p-3">LearnMore</button>
+                                            class="btn btn-outline-secondary w-50 rounded-pill text-uppercase fs-5 text-dark p-3">Learn More</button>
                                     </div>
                                 </div>
                             </div>
@@ -200,7 +201,7 @@
 
             <div class="servicesSection card border-0 px-5">
                 <div class="customHeading card-body mb-5">
-                    <h1 class="ff-values card-title text-center align-self-center fw-normal w-100">We
+                    <h1 class="ff-values card-title text-center align-self-center fw-normal w-100 mb-0">We
                         want to
                         share our value added</h1>
                     </h1>
@@ -214,7 +215,7 @@
                         <div class="servInfo card bg-transparent border-0 float-end">
                             <div class="card-body">
                                 <h5 class="card-title fw-bolder">Business Centric Digital Solutions</h5>
-                                <p class="card-text">TBespoke Digital Solutions: We deliver end-to-end, purpose-fit
+                                <p class="card-text">Bespoke Digital Solutions: We deliver end-to-end, purpose-fit
                                     solutions by reimagining business-critical processes ...</p>
                             </div>
                         </div>
